manifests/deployment.yaml
# manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parte2redes-deployment
  namespace: default
  labels:
    app: parte2redes
spec:
  replicas: 3
  selector:
    matchLabels:
      app: parte2redes
  template:
    metadata:
      labels:
        app: parte2redes
    spec:
      containers:
      - name: parte2redes
        image: dylalva/parte2redes:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
