manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: parte2redes-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: parte2redes
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
