manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: parte2redes-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - redes.mashalladev.site
    secretName: parte2redes-tls
  rules:
  - host: redes.mashalladev.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: parte2redes-service
            port:
              number: 5000
